--- a/Arithmetic.html
+++ b/Arithmetic.html
@@ -30,3 +30,88 @@
     </script>
 </body>
 </html>
+
+
+[3/9, 10:35 PM] Umesh Bro:
+
+ PA 9623
+ROUTE NO 60
+Umesh
+
+28/02/2025
+
+evening pikup
+st 238967
+end 238998
+tot 31
+morning drop
+st 239030
+end 239056
+tot 26
+
+[3/9, 10:35 PM] Umesh Bro: 
+PA 9623
+ROUTE NO 60
+Umesh
+
+05/03/2025
+
+evening pikup
+st 239775
+end 239804
+tot 29
+morning drop
+st 239886
+end 239915
+tot 29
+
+[3/9, 10:35 PM] Umesh Bro: 
+
+PA 9623
+ROUTE NO 60
+Umesh
+
+04/03/2025
+
+evening pikup
+st 239632
+end 239664
+tot 32
+morning drop
+st 239664
+end 239695
+tot 31
+
+[3/9, 10:35 PM] Umesh Bro:
+
+PA 9623
+ROUTE NO 60
+Umesh
+
+03/03/2025
+
+evening pikup
+st 239379
+end 239405
+tot 26
+morning drop
+st 239556
+end 239587
+tot 31
+
+[3/9, 10:35 PM] Umesh Bro: 
+
+PA 9623
+ROUTE NO 60
+Umesh
+
+06/03/2025
+
+evening pikup
+st 240028
+end 240057
+tot 29
+morning drop
+st 240109
+end 240138
+tot 29
